--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -5,7 +5,7 @@
 	margin-bottom: 10px;
 }
 
-#analisis_mensual_fecha_1i, #analisis_mensual_fecha_2i {
+#am_fecha_1i, #am_fecha_2i {
 	width: 45%;
 	margin-right: 10px;
 	float: left;
