--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,11 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">Brand</a>
+				<!-- <a class="navbar-brand" href="/">Brand</a> -->
+				<!-- <img id="logo" src="assets/logo-white.png"> -->
+				<a href="/">
+					<%= image_tag 'logo-white.png', id: "logo" %>
+				</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -53,9 +57,9 @@
 		</div>
 	</div>
 	
-		<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script src="http://underscorejs.org/underscore-min.js"></script>
-		<script src="http://backbonejs.org/backbone-min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src="http://underscorejs.org/underscore-min.js"></script>
+	<script src="http://backbonejs.org/backbone-min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
