adding locals for languages

--- a/app/views/pacientes/_form.html.erb
+++ b/app/views/pacientes/_form.html.erb
@@ -7,14 +7,7 @@
     <% if @paciente.errors.any? %>
 
     <div class="alert alert-danger" role="alert">
-      <h2><%= pluralize(@paciente.errors.count, "error") %> prohibited this paciente from being saved:</h2>
-      <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-      <span class="sr-only">Error:</span>
-      <ul>
-        <% @paciente.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-        <% end %>
-      </ul>
+      <p>Por favor corregir los siguientes errores</p>
     </div>
     <% end %>
 
@@ -36,7 +29,7 @@
     <div class="col-md-6">
       <%= f.text_field(:dni, label:"DNI", placeholder:"12345678")%>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-6">
       <%= f.text_field(:email, placeholder: "mail@example.com")%>
     </div>
     <div class="col-md-12">
@@ -56,8 +49,13 @@
 
 
 
-    <div class="col-md-12">
-      <%= f.submit  "Guardar", class: "btn btn-success" %>
+    <div class="col-md-6">
+      <div class="col-md-3">
+        <%= f.submit  "Guardar", class: "btn btn-success" %>
+      </div>
+      <div class="col-md-3">
+        <%= link_to 'Cancelar', pacientes_path, class: "btn btn-primary" %>
+      </div>
     </div>
     <% end %>
   </div>
