--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,19 +1,19 @@
 <div class="container">
   <div class="row">
-    <h2>Sign up</h2>
+    <h2>Crear cuenta</h2>
     <div class="col-md-6">
       <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
       <div class="col-md-6">
-        <%= f.text_field :firstname, autofocus: true %>
+        <%= f.text_field :firstname, label: "Nombre" , autofocus: true %>
       </div>
       <div class="col-md-6">
-        <%= f.text_field :lastname %>
+        <%= f.text_field :lastname, label: "Apellido" %>
       </div>
       
       <div class="col-md-12">
-        <%= f.email_field :email %>
+        <%= f.email_field :email, label: "Correo electrónico" %>
       </div>
       
 
@@ -22,25 +22,30 @@
 
 
       <div class="col-md-6"> 
-        <%= f.password_field :password, autocomplete: "off" %>
+        <%= f.password_field :password, autocomplete: "off", label:"Contraseña" %>
       </div>
 
       <div class="col-md-6">
-        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", label:"Confirmar contraseña" %>
       </div>
       <div class="col-md-12">
         <% if @validatable %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <em>(<%= @minimum_password_length %> caracteres mínimo)</em>
         <% end %><br />
       </div>
 
       <div class="col-md-12">
-        <%= f.submit "Sign up", class: "btn btn-success" %>
+        <%= f.submit "Crear cuenta", class: "btn btn-success" %>
 
         <% end %>
-        <br>
-        <%= render "devise/shared/links" %>
+
       </div>
+      <div class="col-md-12">
+        <br>
+        <p> Si ya tienes una cuenta, por favor <%= render "devise/shared/links" %> </p>
+      </div>
+      
+
     </div>
   </div>
 </div>
