--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,10 +35,10 @@
 				<ul class="nav navbar-nav navbar-right">
 					<% if user_signed_in? %>
 					<li><%= link_to current_user.email,  edit_user_registration_path %></li>
-					<li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+					<li><%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete %></li>
 					<% else %>
-					<li><%= link_to "Sign Up", new_user_registration_path %></li>
-					<li><%= link_to "Login", user_session_path %></li>
+					<li><%= link_to "Crear cuenta", new_user_registration_path %></li>
+					<li><%= link_to "Iniciar sesión", user_session_path %></li>
 					<%end%>
 				</ul>
 			</div><!-- /.navbar-collapse -->
