--- a/app/views/pacientes/new.html.erb
+++ b/app/views/pacientes/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Paciente</h1>
-
+<div class="row">
+	<h1>Agregar paciente</h1>
+</div>
 <%= render 'form' %>
 
-<%= link_to 'Back', pacientes_path %>
+
